--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,7 +15,7 @@
     "LEGAL_EXPLORING_BOARD": "Exploring the Board",
     "LEGAL_EMAIL": "davideisenbarth@gmail.com",
     "LEGAL_ACCEPTANCE_TITLE": "Acceptance of terms",
-    "LEGAL_ACCEPTANCE_TEXT": "By accessing and using Portfolio (Product), you acknowledge and agree to the following terms and conditions, and any policies, guidelines, or amendments thereto that may be presented to you from time to time. We, the listed students, may update or change the terms and conditions from time to time without notice.",
+    "LEGAL_ACCEPTANCE_TEXT": "By accessing and using Portfolio (Product), you acknowledge and agree to the following terms and conditions, and any policies, guidelines, or amendments thereto that may be presented to you from time to time. I can update or change the terms and conditions from time to time without notice.",
     "LEGAL_SCOPE_TITLE": "Scope and ownership of the product",
     "LEGAL_SCOPE_TEXT": "Portfolio has been developed as part of a student group project in a web development bootcamp at the Developer Akademie GmbH. It has an educational purpose and is not intended for extensive personal & business usage. As such, we cannot guarantee consistent availability, reliability, accuracy, or any other aspect of quality regarding this Product. The design of Portfolio is owned by the Developer Akademie GmbH. Unauthorized use, reproduction, modification, distribution, or replication of the design is strictly prohibited.",
     "LEGAL_PROPRIETARY_TITLE": "Proprietary rights",
